--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_analise.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_analise.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_analise" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -31,7 +32,7 @@
 
 	ORDER BY topAnalis.id_topico_analise]]>
 	</queryString>
-	<field name="pergunta" class="java.lang.String"/>
+	<field name="exercicioTopicoAnalise" class="avaliacao.model.ExercicioTopicoAnalise"/>
 	<field name="resposta" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
@@ -39,7 +40,7 @@
 	<title>
 		<band height="32">
 			<staticText>
-				<reportElement uuid="40e6af8e-6019-40b0-8043-2146f08df8de" mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F"/>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="40e6af8e-6019-40b0-8043-2146f08df8de"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="5"/>
@@ -47,7 +48,7 @@
 				<text><![CDATA[6. AVALIAÇÃO DE DESEMPENHO DO PROGRAMA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="4a04415e-122f-4e67-b8e8-0cd6f7eb2cd5" mode="Opaque" x="0" y="18" width="802" height="14" backcolor="#C8C8C8"/>
+				<reportElement mode="Opaque" x="0" y="18" width="802" height="14" backcolor="#C8C8C8" uuid="4a04415e-122f-4e67-b8e8-0cd6f7eb2cd5"/>
 				<box>
 					<topPen lineWidth="0.0"/>
 					<leftPen lineWidth="0.0"/>
@@ -63,18 +64,18 @@
 		</band>
 	</title>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="39" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" mode="Opaque" x="0" y="5" width="802" height="12" backcolor="#F0F0F0"/>
+				<reportElement positionType="Float" mode="Opaque" x="0" y="5" width="802" height="12" backcolor="#F0F0F0" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement markup="html">
-					<font size="8" pdfFontName="Helvetica-Bold"/>
+					<font fontName="Arial" size="8" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA["<b>"+$F{pergunta}+"</b>"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{exercicioTopicoAnalise}.getTopicoAnalise().getDescricao()]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" x="0" y="20" width="802" height="10"/>
-				<textElement textAlignment="Justified" markup="html">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement x="3" y="22" width="799" height="15" uuid="f98185e4-8b5b-45ac-8f69-c448a53c84ee"/>
+				<textElement textAlignment="Justified">
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{resposta}]]></textFieldExpression>
