--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_custo.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_custo.jrxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_fisico_financeira" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
@@ -41,23 +42,17 @@
 	</queryString>
 	<field name="pergunta" class="java.lang.String"/>
 	<field name="resposta" class="java.lang.String"/>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
-	<title>
-		<band/>
-	</title>
 	<detail>
 		<band height="29" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" x="0" y="19" width="802" height="10"/>
+				<reportElement positionType="Float" x="0" y="19" width="802" height="10" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{resposta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" mode="Opaque" x="0" y="4" width="802" height="12" backcolor="#F0F0F0"/>
+				<reportElement mode="Opaque" x="0" y="4" width="802" height="12" backcolor="#F0F0F0" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement markup="html">
 					<font size="8"/>
 					<paragraph leftIndent="10"/>
