--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_recomendacao.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_recomendacao.jrxml
@@ -1,54 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_recomendacao" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="param_id_prog" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(20)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_id_exerc" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long(1)]]></defaultValueExpression>
-	</parameter>
-	<parameter name="param_id_user" class="java.lang.Long" isForPrompting="false">
-		<defaultValueExpression><![CDATA[new Long (2154)]]></defaultValueExpression>
-	</parameter>
+	<parameter name="recomendacao" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[SELECT rec.descricao as recomendacao
-
-	FROM avaliacao.recomendacao rec
-	INNER JOIN planejamento.exercicio exerc USING (id_exercicio)
-	INNER JOIN controle_acesso.usuario usuar USING (id_usuario)
-	INNER JOIN planejamento.programa prog USING (id_programa)
-
-
-	WHERE prog.id_programa = $P!{param_id_prog}
-	AND exerc.id_exercicio = $P!{param_id_exerc}]]>
+		<![CDATA[ ]]>
 	</queryString>
 	<field name="recomendacao" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="20">
+	<summary>
+		<band height="37">
 			<staticText>
-				<reportElement uuid="40e6af8e-6019-40b0-8043-2146f08df8de" mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F"/>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="20" forecolor="#FEFEFE" backcolor="#465A7F" uuid="40e6af8e-6019-40b0-8043-2146f08df8de"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" pdfFontName="Helvetica-Bold"/>
 					<paragraph leftIndent="5"/>
 				</textElement>
 				<text><![CDATA[7. RECOMENDAÇÕES/CONSIDERAÇÕES]]></text>
 			</staticText>
-		</band>
-	</title>
-	<detail>
-		<band height="10" splitType="Stretch">
-			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" x="0" y="0" width="802" height="10" isPrintWhenDetailOverflows="true"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement positionType="Float" x="0" y="20" width="802" height="10" isPrintWhenDetailOverflows="true" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{recomendacao}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{recomendacao}]]></textFieldExpression>
 			</textField>
 		</band>
-	</detail>
+	</summary>
 </jasperReport>
