--- a/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_resultado.jrxml
+++ b/src/main/webapp/relatorios/avaliacao/sub_relatorio_avaliacao_resultado.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_identificacao_programa" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
+<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sub_relatorio_avaliacao_resultado" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="822" leftMargin="0" rightMargin="20" topMargin="5" bottomMargin="5" uuid="baf1ee89-4621-4c84-bbf4-d17d210a3b48">
 	<property name="ireport.zoom" value="1.771561000000001"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -13,25 +14,9 @@
 		<defaultValueExpression><![CDATA[new Long (86)]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT topResult.descricao as pergunta, result.resposta
-
-	FROM avaliacao.resultado result
-	INNER JOIN avaliacao.exercicio_topico_resultado exercTopResult USING (id_exercicio_topico_resultado)
-	INNER JOIN avaliacao.topico_resultado topResult USING (id_topico_resultado)
-	INNER JOIN planejamento.exercicio exerc ON (exerc.id_exercicio = result.id_exercicio AND exerc.id_exercicio = exercTopResult.id_exercicio)
-	INNER JOIN controle_acesso.usuario usuar USING (id_usuario)
-	INNER JOIN planejamento.programa prog USING (id_programa)
-
-
-
-	WHERE prog.id_programa = $P!{param_id_prog} AND
-
-	exerc.id_exercicio = $P!{param_id_exerc}
-
-
-	ORDER BY topResult.id_topico_resultado]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="pergunta" class="java.lang.String"/>
+	<field name="exercicioTopicoResultado" class="avaliacao.model.ExercicioTopicoResultado"/>
 	<field name="resposta" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
@@ -39,7 +24,7 @@
 	<title>
 		<band height="14">
 			<staticText>
-				<reportElement uuid="4a04415e-122f-4e67-b8e8-0cd6f7eb2cd5" mode="Opaque" x="0" y="0" width="802" height="14" backcolor="#C8C8C8"/>
+				<reportElement mode="Opaque" x="0" y="0" width="802" height="14" backcolor="#C8C8C8" uuid="4a04415e-122f-4e67-b8e8-0cd6f7eb2cd5"/>
 				<box>
 					<topPen lineWidth="0.0"/>
 					<leftPen lineWidth="0.0"/>
@@ -57,15 +42,15 @@
 	<detail>
 		<band height="22" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" mode="Opaque" x="0" y="0" width="802" height="12" backcolor="#F0F0F0"/>
+				<reportElement positionType="Float" mode="Opaque" x="0" y="0" width="802" height="12" backcolor="#F0F0F0" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement markup="html">
 					<font size="8"/>
 					<paragraph leftIndent="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA["<b>"+$F{pergunta}+"</b>"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["<b>"+$F{exercicioTopicoResultado}.getTopicoResultado().getDescricao()+"</b>"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b" positionType="Float" x="0" y="12" width="802" height="10" isPrintWhenDetailOverflows="true"/>
+				<reportElement positionType="Float" x="0" y="12" width="802" height="10" isPrintWhenDetailOverflows="true" uuid="69e1018b-cf87-4397-8d0f-55a3ee32ba3b"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font size="8"/>
 				</textElement>
